<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/logolayout" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/logo"
            android:padding="10dp"
            android:src="@drawable/app" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/Relogin"
        android:layout_width="match_parent"
        android:layout_height="416dp"
        android:layout_below="@+id/logolayout"
        android:padding="15dp"
        tools:ignore="ObsoleteLayoutParam">


        <TextView
            android:id="@+id/login_tx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:letterSpacing="0.03"
            android:text="@string/login"
            android:textColor="#0d6e6a"
            android:textSize="35sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_tx"
            android:layout_marginTop="30dp"
            android:background="@drawable/forget"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="5dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="14dp"
            android:textColor="@color/myprimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_marginTop="20dp"
            android:background="@drawable/forget"
            android:drawableLeft="@drawable/lock"
            android:drawablePadding="5dp"
            android:hint="@string/password"
            android:inputType="text"
            android:padding="14dp"
            android:textColor="#0d6e6a"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_alignRight="@+id/password"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/forget_password"
            android:textColor="#0d6e6a"
            android:textSize="18sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forgotPassword"
            android:layout_marginTop="24dp"
            android:background="@drawable/button"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="#FFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginBtn"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/msg1_tx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/don_t_have_an_account"
                android:textColor="#0d6e6a"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_margin="15dp"/>

            <TextView
                android:id="@+id/createText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="15dp"/>
        </LinearLayout>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

</LinearLayout>